/*******************************************************************************
 * Copyright (c) 2013-2017 Contributors to the Eclipse Foundation
 *
 * See the NOTICE file distributed with this work for additional
 * information regarding copyright ownership.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Apache License
 * Version 2.0 which accompanies this distribution and is available at
 * http://www.apache.org/licenses/LICENSE-2.0.txt
 ******************************************************************************/
syntax = "proto3";
import "GeoWaveReturnTypes.proto";
option java_multiple_files = true;
option java_package = "mil.nga.giat.geowave.service.grpc.protobuf";
option java_outer_classname = "CoreCliService";

service CoreCli { 
	 rpc SetCommand(SetCommandParameters) returns (StringResponse) {} 
	 rpc ListCommand(ListCommandParameters) returns (MapStringStringResponse) {} 
}

message SetCommandParameters {
	repeated string parameters = 1;
	string password = 2;
}

message ListCommandParameters {
	string filter = 1;
}
